--- a/index.html
+++ b/index.html
@@ -6,6 +6,48 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-<div class="header"><h1>bbbbb</h1></div>
+<div class="hero">
+  <h1>Broadway Design</h1>
+  <div class="nav">
+    <p><a href="#home">Home</a></p>
+    <p><a href="#process">Process</a></p>
+    <p><a href="#work">Work</a></p>
+    <p><a href="#team">Team</a></p>
+    <p><a href="#contact">Contact</a></p>
+  </div>
+</div>
+<div id="process">
+<h2>Our Process</h2>
+  <img src ="./resources/images/identify.svg" alt="identify icon"/>
+    <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+  <img src ="./resources/images/understand.svg" alt="identify icon"/>
+    <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+  <img src ="./resources/images/execute.svg" alt="identify icon"/>
+    <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+</div>
+<div class="hero"><h2>Designed in New York</h2></div>
+  <div id="work">
+    <h2>Portfolio</h2>
+    <p>Coming soon</p>
+  </div>
+  <div id="work">
+    <h2>Team</h2>
+    <p>We're hiring!</p>
+  </div>
+    <div id="contact">
+    <h2>Contact</h2>
+    <p>Phone: (555)-555-5555<br /><br />E-mail: test@example.com<br /><br />Twitter: @test</p>
+  </div>
+  <div class="footer">
+    © Broadway 2017
+    <a href="#home">Home</a>
+    <a href="#process">Process</a>
+    <a href="#work">Work</a>
+    <a href="#team">Team</a>
+    <a href="#contact">Contact</a>
+  </div>
   </body>
 </html>
